# BSU-2Degree-Operating-Systems

./: Readme.md  main.cpp
Lab1/src/: OS_createProcess.cpp
Lab2-unix/include/: unix_process_manager.h
Lab2-unix/src/: Creator.cpp  Source_Main.cpp  unix_process_manager.cpp
Lab2/CreatingProcess_Lab2/: CreatingProcess_Lab2.sln
Lab2/CreatingProcess_Lab2/CreatingProcess_Lab2/: CreatingProcess_Lab2.vcxproj  CreatingProcess_Lab2.vcxproj.filters  Employee.h  Source_Main.cpp  i.i
Lab2/CreatingProcess_Lab2/Creator/: Creator.cpp  Creator.vcxproj  Creator.vcxproj.filters
Lab2/CreatingProcess_Lab2/Reporter/: Reporter.cpp  Reporter.vcxproj  Reporter.vcxproj.filters
Lab3/: OS_Lab3.cpp  avarage_thr.cpp  avarage_thr.h  minmax_thr.cpp  minmax_thr.h
Lab3/include/: labArgument.h  lab_argument.h
Lab3/include/Threads/: average.h  minmax.h
Lab3/src/: average.cpp  main (2).cpp  main.cpp  minmax.cpp
Lab3/src/Threads/: average.cpp  minmax.cpp
Lab4/ThreadSync/: ThreadSync.sln
Lab4/ThreadSync/Debug/: DimasLab4.ilk  ThreadSync.ilk  ThreadSynchronization.ilk
Lab4/ThreadSync/DimasLab4/: DimasLab4.vcxproj  DimasLab4.vcxproj.filters  main.cpp
Lab4/ThreadSync/ThreadSync/: MarkerArguments.h  ThreadArguments.h  ThreadSync.vcxproj  (+2 more)
Lab4/include/: marker_arguments.h
Lab4/src/: array_manager.cpp
lab5/: CMakeLists.txt
lab5/Receiver/: Event.cpp  Event.h  Mutex.cpp  Mutex.h  Process.cpp  Process.h  Receiver.cpp  Semaphore.cpp  Semaphore.h  WinException.cpp  WinException.h  globals.h
lab5/Sender/: Sender.cpp
lab6/include/: employee.h
lab6/src/: client.cpp  server.cpp
(+49 files in other folders)
